# aula_18_aovivo

./: exemplo_00.py  pyproject.toml
src/: main.py  models.py  pokemon.db  schema.py
